--- a/cfn/templates/nodegroup/eks-nodegroup-multus.yaml
+++ b/cfn/templates/nodegroup/eks-nodegroup-multus.yaml
@@ -458,9 +458,14 @@ Resources:
             - Effect: Allow
               Action: [
                 "ec2:AssignPrivateIpAddresses",
-                "ec2:DescribeNetworkInterfaces",
+                "ec2:AssignIpv6Addresses",
+                "ec2:DescribeInstances",
                 "ec2:DescribeSubnets",
-                "ec2:ModifyInstanceAttribute"
+                "ec2:DescribeNetworkInterfaces",
+                "ec2:ModifyNetworkInterfaceAttribute",
+            	  "ec2:ModifyInstanceMetadataOptions",
+                "ec2:UnassignIpv6Addresses",
+                "ec2:UnassignPrivateIpAddresses"
               ]
               Resource: "*"
 
